Ruby/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> block
Rule 2     block -> statementList
Rule 3     statementList -> statement
Rule 4     statementList -> statementList statement
Rule 5     statement -> ID ASSIGN expression
Rule 6     statement -> ID ASSIGN stringList
Rule 7     statement -> ID ASSIGN boolean
Rule 8     statement -> ID ASSIGN array
Rule 9     statement -> if conditionList statementList end
Rule 10    statement -> if conditionList statementList else statementList end
Rule 11    statement -> if conditionList statementList elseifList else statementList end
Rule 12    statement -> case comparables whenList else statementList end
Rule 13    statement -> unless conditionList statementList else statementList end
Rule 14    statement -> expression CICLE1 iterable statementList end
Rule 15    statement -> expression CICLE2 iterable statementList end
Rule 16    statement -> expression CICLE3 do BARR ID COMMA ID BARR statementList end
Rule 17    statement -> while conditionList statementList end
Rule 18    statement -> printList stringList
Rule 19    statement -> printList expression
Rule 20    statement -> printList boolean
Rule 21    statement -> ID ASSIGN KeyEntry
Rule 22    statement -> ID LSQUARE arrayIdList RSQUARE ASSIGN expression
Rule 23    statement -> ID LSQUARE arrayIdList RSQUARE ASSIGN stringList
Rule 24    statement -> ID LSQUARE arrayIdList RSQUARE ASSIGN boolean
Rule 25    statement -> ID LSQUARE arrayIdList RSQUARE ASSIGN array
Rule 26    statement -> ID
Rule 27    statement -> ID assigList expression
Rule 28    statement -> ID LSQUARE arrayIdList RSQUARE assigList expression
Rule 29    statement -> printList array
Rule 30    statement -> require TEXT2
Rule 31    KeyEntry -> KEYB1
Rule 32    KeyEntry -> KEYB1 TOINT
Rule 33    KeyEntry -> KEYB1 TOFLO
Rule 34    arrayIdList -> expression COMMA expression
Rule 35    arrayIdList -> expression
Rule 36    iterable -> do
Rule 37    iterable -> do BARR ID BARR
Rule 38    elseifList -> elsif conditionList statementList
Rule 39    elseifList -> elseifList elsif conditionList statementList
Rule 40    whenList -> when comparables statementList
Rule 41    whenList -> whenList when comparables statementList
Rule 42    conditionList -> condition
Rule 43    conditionList -> conditionList logicRelation condition
Rule 44    condition -> comparables relation comparables
Rule 45    condition -> NOT comparables
Rule 46    condition -> not comparables
Rule 47    condition -> comparables
Rule 48    comparables -> expression
Rule 49    comparables -> stringList
Rule 50    comparables -> boolean
Rule 51    comparables -> array
Rule 52    relation -> EQUAL
Rule 53    relation -> NE
Rule 54    relation -> LT
Rule 55    relation -> GT
Rule 56    relation -> LTE
Rule 57    relation -> GTE
Rule 58    logicRelation -> AND
Rule 59    logicRelation -> OR
Rule 60    logicRelation -> and
Rule 61    logicRelation -> or
Rule 62    assigList -> ASSIGPLUS
Rule 63    assigList -> ASSIGMINUS
Rule 64    printList -> puts
Rule 65    printList -> print
Rule 66    expression -> term
Rule 67    expression -> addingOperator term
Rule 68    expression -> expression addingOperator term
Rule 69    addingOperator -> PLUS
Rule 70    addingOperator -> MINUS
Rule 71    term -> factor
Rule 72    term -> term multiplyingOperator factor
Rule 73    funcList -> TOINT
Rule 74    funcList -> TOSTR
Rule 75    funcList -> TOFLO
Rule 76    multiplyingOperator -> TIMES
Rule 77    multiplyingOperator -> DIVIDE
Rule 78    multiplyingOperator -> EXPO
Rule 79    multiplyingOperator -> MOD
Rule 80    factor -> ID
Rule 81    factor -> NUMBER
Rule 82    factor -> LPARENT optionList RPARENT
Rule 83    factor -> FLOAT
Rule 84    factor -> ID LSQUARE expression RSQUARE
Rule 85    factor -> optionList funcList
Rule 86    factor -> optionList funcVecList
Rule 87    factor -> String funcList
Rule 88    optionList -> expression
Rule 89    optionList -> array
Rule 90    optionList -> String
Rule 91    stringList -> String
Rule 92    stringList -> stringList PLUS expression
Rule 93    stringList -> stringList PLUS String
Rule 94    stringList -> stringList PLUS boolean
Rule 95    stringList -> stringList PLUS array
Rule 96    stringList -> boolean PLUS String
Rule 97    stringList -> expression PLUS String
Rule 98    stringList -> array PLUS String
Rule 99    String -> textList
Rule 100   String -> String PLUS textList
Rule 101   String -> String PLUS ID
Rule 102   textList -> TEXT
Rule 103   textList -> TEXT2
Rule 104   boolean -> true
Rule 105   boolean -> false
Rule 106   array -> LSQUARE arrayList RSQUARE
Rule 107   arrayList -> expression
Rule 108   arrayList -> String
Rule 109   arrayList -> boolean
Rule 110   arrayList -> LSQUARE arrayList RSQUARE
Rule 111   arrayList -> arrayList COMMA expression
Rule 112   arrayList -> arrayList COMMA String
Rule 113   arrayList -> arrayList COMMA boolean
Rule 114   arrayList -> arrayList COMMA LSQUARE arrayList RSQUARE
Rule 115   funcVecList -> LENGTH
Rule 116   funcVecList -> MEAN
Rule 117   funcVecList -> STANDAR
Rule 118   funcVecList -> MEDIAN
Rule 119   funcVecList -> VARIANCE
Rule 120   funcVecList -> SUM

Terminals, with rules where they appear

AND                  : 58
ASSIGMINUS           : 63
ASSIGN               : 5 6 7 8 21 22 23 24 25
ASSIGPLUS            : 62
BARR                 : 16 16 37 37
CICLE1               : 14
CICLE2               : 15
CICLE3               : 16
COMMA                : 16 34 111 112 113 114
DIVIDE               : 77
EQUAL                : 52
EXPO                 : 78
FLOAT                : 83
GT                   : 55
GTE                  : 57
ID                   : 5 6 7 8 16 16 21 22 23 24 25 26 27 28 37 80 84 101
KEYB1                : 31 32 33
LENGTH               : 115
LPARENT              : 82
LSQUARE              : 22 23 24 25 28 84 106 110 114
LT                   : 54
LTE                  : 56
MEAN                 : 116
MEDIAN               : 118
MINUS                : 70
MOD                  : 79
NE                   : 53
NOT                  : 45
NUMBER               : 81
OR                   : 59
PLUS                 : 69 92 93 94 95 96 97 98 100 101
RPARENT              : 82
RSQUARE              : 22 23 24 25 28 84 106 110 114
STANDAR              : 117
SUM                  : 120
TEXT                 : 102
TEXT2                : 30 103
TIMES                : 76
TOFLO                : 33 75
TOINT                : 32 73
TOSTR                : 74
VARIANCE             : 119
and                  : 60
case                 : 12
do                   : 16 36 37
else                 : 10 11 12 13
elsif                : 38 39
end                  : 9 10 11 12 13 14 15 16 17
error                : 
false                : 105
if                   : 9 10 11
not                  : 46
or                   : 61
print                : 65
puts                 : 64
require              : 30
true                 : 104
unless               : 13
when                 : 40 41
while                : 17

Nonterminals, with rules where they appear

KeyEntry             : 21
String               : 87 90 91 93 96 97 98 100 101 108 112
addingOperator       : 67 68
array                : 8 25 29 51 89 95 98
arrayIdList          : 22 23 24 25 28
arrayList            : 106 110 111 112 113 114 114
assigList            : 27 28
block                : 1
boolean              : 7 20 24 50 94 96 109 113
comparables          : 12 40 41 44 44 45 46 47
condition            : 42 43
conditionList        : 9 10 11 13 17 38 39 43
elseifList           : 11 39
expression           : 5 14 15 16 19 22 27 28 34 34 35 48 68 84 88 92 97 107 111
factor               : 71 72
funcList             : 85 87
funcVecList          : 86
iterable             : 14 15
logicRelation        : 43
multiplyingOperator  : 72
optionList           : 82 85 86
printList            : 18 19 20 29
program              : 0
relation             : 44
statement            : 3 4
statementList        : 2 4 9 10 10 11 11 12 13 13 14 15 16 17 38 39 40 41
stringList           : 6 18 23 49 92 93 94 95
term                 : 66 67 68 72
textList             : 99 100
whenList             : 12 41

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . block
    (2) block -> . statementList
    (3) statementList -> . statement
    (4) statementList -> . statementList statement
    (5) statement -> . ID ASSIGN expression
    (6) statement -> . ID ASSIGN stringList
    (7) statement -> . ID ASSIGN boolean
    (8) statement -> . ID ASSIGN array
    (9) statement -> . if conditionList statementList end
    (10) statement -> . if conditionList statementList else statementList end
    (11) statement -> . if conditionList statementList elseifList else statementList end
    (12) statement -> . case comparables whenList else statementList end
    (13) statement -> . unless conditionList statementList else statementList end
    (14) statement -> . expression CICLE1 iterable statementList end
    (15) statement -> . expression CICLE2 iterable statementList end
    (16) statement -> . expression CICLE3 do BARR ID COMMA ID BARR statementList end
    (17) statement -> . while conditionList statementList end
    (18) statement -> . printList stringList
    (19) statement -> . printList expression
    (20) statement -> . printList boolean
    (21) statement -> . ID ASSIGN KeyEntry
    (22) statement -> . ID LSQUARE arrayIdList RSQUARE ASSIGN expression
    (23) statement -> . ID LSQUARE arrayIdList RSQUARE ASSIGN stringList
    (24) statement -> . ID LSQUARE arrayIdList RSQUARE ASSIGN boolean
    (25) statement -> . ID LSQUARE arrayIdList RSQUARE ASSIGN array
    (26) statement -> . ID
    (27) statement -> . ID assigList expression
    (28) statement -> . ID LSQUARE arrayIdList RSQUARE assigList expression
    (29) statement -> . printList array
    (30) statement -> . require TEXT2
    (66) expression -> . term
    (67) expression -> . addingOperator term
    (68) expression -> . expression addingOperator term
    (64) printList -> . puts
    (65) printList -> . print
    (71) term -> . factor
    (72) term -> . term multiplyingOperator factor
    (69) addingOperator -> . PLUS
    (70) addingOperator -> . MINUS
    (80) factor -> . ID
    (81) factor -> . NUMBER
    (82) factor -> . LPARENT optionList RPARENT
    (83) factor -> . FLOAT
    (84) factor -> . ID LSQUARE expression RSQUARE
    (85) factor -> . optionList funcList
    (86) factor -> . optionList funcVecList
    (87) factor -> . String funcList
    (88) optionList -> . expression
    (89) optionList -> . array
    (90) optionList -> . String
    (99) String -> . textList
    (100) String -> . String PLUS textList
    (101) String -> . String PLUS ID
    (106) array -> . LSQUARE arrayList RSQUARE
    (102) textList -> . TEXT
    (103) textList -> . TEXT2

    ID              shift and go to state 5
    if              shift and go to state 8
    case            shift and go to state 9
    unless          shift and go to state 10
    while           shift and go to state 11
    require         shift and go to state 14
    puts            shift and go to state 18
    print           shift and go to state 19
    PLUS            shift and go to state 21
    MINUS           shift and go to state 22
    NUMBER          shift and go to state 23
    LPARENT         shift and go to state 24
    FLOAT           shift and go to state 26
    LSQUARE         shift and go to state 13
    TEXT            shift and go to state 29
    TEXT2           shift and go to state 15

    program                        shift and go to state 1
    block                          shift and go to state 2
    statementList                  shift and go to state 3
    statement                      shift and go to state 4
    expression                     shift and go to state 6
    array                          shift and go to state 7
    printList                      shift and go to state 12
    term                           shift and go to state 16
    addingOperator                 shift and go to state 17
    factor                         shift and go to state 20
    optionList                     shift and go to state 25
    String                         shift and go to state 27
    textList                       shift and go to state 28

state 1

    (0) S' -> program .



state 2

    (1) program -> block .

    $end            reduce using rule 1 (program -> block .)


state 3

    (2) block -> statementList .
    (4) statementList -> statementList . statement
    (5) statement -> . ID ASSIGN expression
    (6) statement -> . ID ASSIGN stringList
    (7) statement -> . ID ASSIGN boolean
    (8) statement -> . ID ASSIGN array
    (9) statement -> . if conditionList statementList end
    (10) statement -> . if conditionList statementList else statementList end
    (11) statement -> . if conditionList statementList elseifList else statementList end
    (12) statement -> . case comparables whenList else statementList end
    (13) statement -> . unless conditionList statementList else statementList end
    (14) statement -> . expression CICLE1 iterable statementList end
    (15) statement -> . expression CICLE2 iterable statementList end
    (16) statement -> . expression CICLE3 do BARR ID COMMA ID BARR statementList end
    (17) statement -> . while conditionList statementList end
    (18) statement -> . printList stringList
    (19) statement -> . printList expression
    (20) statement -> . printList boolean
    (21) statement -> . ID ASSIGN KeyEntry
    (22) statement -> . ID LSQUARE arrayIdList RSQUARE ASSIGN expression
    (23) statement -> . ID LSQUARE arrayIdList RSQUARE ASSIGN stringList
    (24) statement -> . ID LSQUARE arrayIdList RSQUARE ASSIGN boolean
    (25) statement -> . ID LSQUARE arrayIdList RSQUARE ASSIGN array
    (26) statement -> . ID
    (27) statement -> . ID assigList expression
    (28) statement -> . ID LSQUARE arrayIdList RSQUARE assigList expression
    (29) statement -> . printList array
    (30) statement -> . require TEXT2
    (66) expression -> . term
    (67) expression -> . addingOperator term
    (68) expression -> . expression addingOperator term
    (64) printList -> . puts
    (65) printList -> . print
    (71) term -> . factor
    (72) term -> . term multiplyingOperator factor
    (69) addingOperator -> . PLUS
    (70) addingOperator -> . MINUS
    (80) factor -> . ID
    (81) factor -> . NUMBER
    (82) factor -> . LPARENT optionList RPARENT
    (83) factor -> . FLOAT
    (84) factor -> . ID LSQUARE expression RSQUARE
    (85) factor -> . optionList funcList
    (86) factor -> . optionList funcVecList
    (87) factor -> . String funcList
    (88) optionList -> . expression
    (89) optionList -> . array
    (90) optionList -> . String
    (99) String -> . textList
    (100) String -> . String PLUS textList
    (101) String -> . String PLUS ID
    (106) array -> . LSQUARE arrayList RSQUARE
    (102) textList -> . TEXT
    (103) textList -> . TEXT2

    $end            reduce using rule 2 (block -> statementList .)
    ID              shift and go to state 5
    if              shift and go to state 8
    case            shift and go to state 9
    unless          shift and go to state 10
    while           shift and go to state 11
    require         shift and go to state 14
    puts            shift and go to state 18
    print           shift and go to state 19
    PLUS            shift and go to state 21
    MINUS           shift and go to state 22
    NUMBER          shift and go to state 23
    LPARENT         shift and go to state 24
    FLOAT           shift and go to state 26
    LSQUARE         shift and go to state 13
    TEXT            shift and go to state 29
    TEXT2           shift and go to state 15

    statement                      shift and go to state 30
    expression                     shift and go to state 6
    array                          shift and go to state 7
    printList                      shift and go to state 12
    term                           shift and go to state 16
    addingOperator                 shift and go to state 17
    factor                         shift and go to state 20
    optionList                     shift and go to state 25
    String                         shift and go to state 27
    textList                       shift and go to state 28

state 4

    (3) statementList -> statement .

    ID              reduce using rule 3 (statementList -> statement .)
    if              reduce using rule 3 (statementList -> statement .)
    case            reduce using rule 3 (statementList -> statement .)
    unless          reduce using rule 3 (statementList -> statement .)
    while           reduce using rule 3 (statementList -> statement .)
    require         reduce using rule 3 (statementList -> statement .)
    puts            reduce using rule 3 (statementList -> statement .)
    print           reduce using rule 3 (statementList -> statement .)
    PLUS            reduce using rule 3 (statementList -> statement .)
    MINUS           reduce using rule 3 (statementList -> statement .)
    NUMBER          reduce using rule 3 (statementList -> statement .)
    LPARENT         reduce using rule 3 (statementList -> statement .)
    FLOAT           reduce using rule 3 (statementList -> statement .)
    LSQUARE         reduce using rule 3 (statementList -> statement .)
    TEXT            reduce using rule 3 (statementList -> statement .)
    TEXT2           reduce using rule 3 (statementList -> statement .)
    $end            reduce using rule 3 (statementList -> statement .)
    end             reduce using rule 3 (statementList -> statement .)
    else            reduce using rule 3 (statementList -> statement .)
    elsif           reduce using rule 3 (statementList -> statement .)
    when            reduce using rule 3 (statementList -> statement .)


state 5

    (5) statement -> ID . ASSIGN expression
    (6) statement -> ID . ASSIGN stringList
    (7) statement -> ID . ASSIGN boolean
    (8) statement -> ID . ASSIGN array
    (21) statement -> ID . ASSIGN KeyEntry
    (22) statement -> ID . LSQUARE arrayIdList RSQUARE ASSIGN expression
    (23) statement -> ID . LSQUARE arrayIdList RSQUARE ASSIGN stringList
    (24) statement -> ID . LSQUARE arrayIdList RSQUARE ASSIGN boolean
    (25) statement -> ID . LSQUARE arrayIdList RSQUARE ASSIGN array
    (26) statement -> ID .
    (27) statement -> ID . assigList expression
    (28) statement -> ID . LSQUARE arrayIdList RSQUARE assigList expression
    (80) factor -> ID .
    (84) factor -> ID . LSQUARE expression RSQUARE
    (62) assigList -> . ASSIGPLUS
    (63) assigList -> . ASSIGMINUS

  ! shift/reduce conflict for LSQUARE resolved as shift
  ! reduce/reduce conflict for PLUS resolved using rule 26 (statement -> ID .)
  ! reduce/reduce conflict for MINUS resolved using rule 26 (statement -> ID .)
    ASSIGN          shift and go to state 31
    LSQUARE         shift and go to state 32
    ID              reduce using rule 26 (statement -> ID .)
    if              reduce using rule 26 (statement -> ID .)
    case            reduce using rule 26 (statement -> ID .)
    unless          reduce using rule 26 (statement -> ID .)
    while           reduce using rule 26 (statement -> ID .)
    require         reduce using rule 26 (statement -> ID .)
    puts            reduce using rule 26 (statement -> ID .)
    print           reduce using rule 26 (statement -> ID .)
    PLUS            reduce using rule 26 (statement -> ID .)
    MINUS           reduce using rule 26 (statement -> ID .)
    NUMBER          reduce using rule 26 (statement -> ID .)
    LPARENT         reduce using rule 26 (statement -> ID .)
    FLOAT           reduce using rule 26 (statement -> ID .)
    TEXT            reduce using rule 26 (statement -> ID .)
    TEXT2           reduce using rule 26 (statement -> ID .)
    $end            reduce using rule 26 (statement -> ID .)
    end             reduce using rule 26 (statement -> ID .)
    else            reduce using rule 26 (statement -> ID .)
    elsif           reduce using rule 26 (statement -> ID .)
    when            reduce using rule 26 (statement -> ID .)
    TIMES           reduce using rule 80 (factor -> ID .)
    DIVIDE          reduce using rule 80 (factor -> ID .)
    EXPO            reduce using rule 80 (factor -> ID .)
    MOD             reduce using rule 80 (factor -> ID .)
    CICLE1          reduce using rule 80 (factor -> ID .)
    CICLE2          reduce using rule 80 (factor -> ID .)
    CICLE3          reduce using rule 80 (factor -> ID .)
    TOINT           reduce using rule 80 (factor -> ID .)
    TOSTR           reduce using rule 80 (factor -> ID .)
    TOFLO           reduce using rule 80 (factor -> ID .)
    LENGTH          reduce using rule 80 (factor -> ID .)
    MEAN            reduce using rule 80 (factor -> ID .)
    STANDAR         reduce using rule 80 (factor -> ID .)
    MEDIAN          reduce using rule 80 (factor -> ID .)
    VARIANCE        reduce using rule 80 (factor -> ID .)
    SUM             reduce using rule 80 (factor -> ID .)
    ASSIGPLUS       shift and go to state 34
    ASSIGMINUS      shift and go to state 35

  ! LSQUARE         [ reduce using rule 26 (statement -> ID .) ]
  ! PLUS            [ reduce using rule 80 (factor -> ID .) ]
  ! MINUS           [ reduce using rule 80 (factor -> ID .) ]

    assigList                      shift and go to state 33

state 6

    (14) statement -> expression . CICLE1 iterable statementList end
    (15) statement -> expression . CICLE2 iterable statementList end
    (16) statement -> expression . CICLE3 do BARR ID COMMA ID BARR statementList end
    (68) expression -> expression . addingOperator term
    (88) optionList -> expression .
    (69) addingOperator -> . PLUS
    (70) addingOperator -> . MINUS

    CICLE1          shift and go to state 36
    CICLE2          shift and go to state 37
    CICLE3          shift and go to state 38
    TOINT           reduce using rule 88 (optionList -> expression .)
    TOSTR           reduce using rule 88 (optionList -> expression .)
    TOFLO           reduce using rule 88 (optionList -> expression .)
    LENGTH          reduce using rule 88 (optionList -> expression .)
    MEAN            reduce using rule 88 (optionList -> expression .)
    STANDAR         reduce using rule 88 (optionList -> expression .)
    MEDIAN          reduce using rule 88 (optionList -> expression .)
    VARIANCE        reduce using rule 88 (optionList -> expression .)
    SUM             reduce using rule 88 (optionList -> expression .)
    PLUS            shift and go to state 21
    MINUS           shift and go to state 22

    addingOperator                 shift and go to state 39

state 7

    (89) optionList -> array .

    TOINT           reduce using rule 89 (optionList -> array .)
    TOSTR           reduce using rule 89 (optionList -> array .)
    TOFLO           reduce using rule 89 (optionList -> array .)
    LENGTH          reduce using rule 89 (optionList -> array .)
    MEAN            reduce using rule 89 (optionList -> array .)
    STANDAR         reduce using rule 89 (optionList -> array .)
    MEDIAN          reduce using rule 89 (optionList -> array .)
    VARIANCE        reduce using rule 89 (optionList -> array .)
    SUM             reduce using rule 89 (optionList -> array .)
    RPARENT         reduce using rule 89 (optionList -> array .)


state 8

    (9) statement -> if . conditionList statementList end
    (10) statement -> if . conditionList statementList else statementList end
    (11) statement -> if . conditionList statementList elseifList else statementList end
    (42) conditionList -> . condition
    (43) conditionList -> . conditionList logicRelation condition
    (44) condition -> . comparables relation comparables
    (45) condition -> . NOT comparables
    (46) condition -> . not comparables
    (47) condition -> . comparables
    (48) comparables -> . expression
    (49) comparables -> . stringList
    (50) comparables -> . boolean
    (51) comparables -> . array
    (66) expression -> . term
    (67) expression -> . addingOperator term
    (68) expression -> . expression addingOperator term
    (91) stringList -> . String
    (92) stringList -> . stringList PLUS expression
    (93) stringList -> . stringList PLUS String
    (94) stringList -> . stringList PLUS boolean
    (95) stringList -> . stringList PLUS array
    (96) stringList -> . boolean PLUS String
    (97) stringList -> . expression PLUS String
    (98) stringList -> . array PLUS String
    (104) boolean -> . true
    (105) boolean -> . false
    (106) array -> . LSQUARE arrayList RSQUARE
    (71) term -> . factor
    (72) term -> . term multiplyingOperator factor
    (69) addingOperator -> . PLUS
    (70) addingOperator -> . MINUS
    (99) String -> . textList
    (100) String -> . String PLUS textList
    (101) String -> . String PLUS ID
    (80) factor -> . ID
    (81) factor -> . NUMBER
    (82) factor -> . LPARENT optionList RPARENT
    (83) factor -> . FLOAT
    (84) factor -> . ID LSQUARE expression RSQUARE
    (85) factor -> . optionList funcList
    (86) factor -> . optionList funcVecList
    (87) factor -> . String funcList
    (102) textList -> . TEXT
    (103) textList -> . TEXT2
    (88) optionList -> . expression
    (89) optionList -> . array
    (90) optionList -> . String

    NOT             shift and go to state 43
    not             shift and go to state 44
    true            shift and go to state 50
    false           shift and go to state 51
    LSQUARE         shift and go to state 13
    PLUS            shift and go to state 21
    MINUS           shift and go to state 22
    ID              shift and go to state 52
    NUMBER          shift and go to state 23
    LPARENT         shift and go to state 24
    FLOAT           shift and go to state 26
    TEXT            shift and go to state 29
    TEXT2           shift and go to state 15

    conditionList                  shift and go to state 40
    condition                      shift and go to state 41
    comparables                    shift and go to state 42
    expression                     shift and go to state 45
    stringList                     shift and go to state 46
    boolean                        shift and go to state 47
    array                          shift and go to state 48
    term                           shift and go to state 16
    addingOperator                 shift and go to state 17
    String                         shift and go to state 49
    factor                         shift and go to state 20
    textList                       shift and go to state 28
    optionList                     shift and go to state 25

state 9

    (12) statement -> case . comparables whenList else statementList end
    (48) comparables -> . expression
    (49) comparables -> . stringList
    (50) comparables -> . boolean
    (51) comparables -> . array
    (66) expression -> . term
    (67) expression -> . addingOperator term
    (68) expression -> . expression addingOperator term
    (91) stringList -> . String
    (92) stringList -> . stringList PLUS expression
    (93) stringList -> . stringList PLUS String
    (94) stringList -> . stringList PLUS boolean
    (95) stringList -> . stringList PLUS array
    (96) stringList -> . boolean PLUS String
    (97) stringList -> . expression PLUS String
    (98) stringList -> . array PLUS String
    (104) boolean -> . true
    (105) boolean -> . false
    (106) array -> . LSQUARE arrayList RSQUARE
    (71) term -> . factor
    (72) term -> . term multiplyingOperator factor
    (69) addingOperator -> . PLUS
    (70) addingOperator -> . MINUS
    (99) String -> . textList
    (100) String -> . String PLUS textList
    (101) String -> . String PLUS ID
    (80) factor -> . ID
    (81) factor -> . NUMBER
    (82) factor -> . LPARENT optionList RPARENT
    (83) factor -> . FLOAT
    (84) factor -> . ID LSQUARE expression RSQUARE
    (85) factor -> . optionList funcList
    (86) factor -> . optionList funcVecList
    (87) factor -> . String funcList
    (102) textList -> . TEXT
    (103) textList -> . TEXT2
    (88) optionList -> . expression
    (89) optionList -> . array
    (90) optionList -> . String

    true            shift and go to state 50
    false           shift and go to state 51
    LSQUARE         shift and go to state 13
    PLUS            shift and go to state 21
    MINUS           shift and go to state 22
    ID              shift and go to state 52
    NUMBER          shift and go to state 23
    LPARENT         shift and go to state 24
    FLOAT           shift and go to state 26
    TEXT            shift and go to state 29
    TEXT2           shift and go to state 15

    comparables                    shift and go to state 53
    expression                     shift and go to state 45
    stringList                     shift and go to state 46
    boolean                        shift and go to state 47
    array                          shift and go to state 48
    term                           shift and go to state 16
    addingOperator                 shift and go to state 17
    String                         shift and go to state 49
    factor                         shift and go to state 20
    textList                       shift and go to state 28
    optionList                     shift and go to state 25

state 10

    (13) statement -> unless . conditionList statementList else statementList end
    (42) conditionList -> . condition
    (43) conditionList -> . conditionList logicRelation condition
    (44) condition -> . comparables relation comparables
    (45) condition -> . NOT comparables
    (46) condition -> . not comparables
    (47) condition -> . comparables
    (48) comparables -> . expression
    (49) comparables -> . stringList
    (50) comparables -> . boolean
    (51) comparables -> . array
    (66) expression -> . term
    (67) expression -> . addingOperator term
    (68) expression -> . expression addingOperator term
    (91) stringList -> . String
    (92) stringList -> . stringList PLUS expression
    (93) stringList -> . stringList PLUS String
    (94) stringList -> . stringList PLUS boolean
    (95) stringList -> . stringList PLUS array
    (96) stringList -> . boolean PLUS String
    (97) stringList -> . expression PLUS String
    (98) stringList -> . array PLUS String
    (104) boolean -> . true
    (105) boolean -> . false
    (106) array -> . LSQUARE arrayList RSQUARE
    (71) term -> . factor
    (72) term -> . term multiplyingOperator factor
    (69) addingOperator -> . PLUS
    (70) addingOperator -> . MINUS
    (99) String -> . textList
    (100) String -> . String PLUS textList
    (101) String -> . String PLUS ID
    (80) factor -> . ID
    (81) factor -> . NUMBER
    (82) factor -> . LPARENT optionList RPARENT
    (83) factor -> . FLOAT
    (84) factor -> . ID LSQUARE expression RSQUARE
    (85) factor -> . optionList funcList
    (86) factor -> . optionList funcVecList
    (87) factor -> . String funcList
    (102) textList -> . TEXT
    (103) textList -> . TEXT2
    (88) optionList -> . expression
    (89) optionList -> . array
    (90) optionList -> . String

    NOT             shift and go to state 43
    not             shift and go to state 44
    true            shift and go to state 50
    false           shift and go to state 51
    LSQUARE         shift and go to state 13
    PLUS            shift and go to state 21
    MINUS           shift and go to state 22
    ID              shift and go to state 52
    NUMBER          shift and go to state 23
    LPARENT         shift and go to state 24
    FLOAT           shift and go to state 26
    TEXT            shift and go to state 29
    TEXT2           shift and go to state 15

    conditionList                  shift and go to state 54
    condition                      shift and go to state 41
    comparables                    shift and go to state 42
    expression                     shift and go to state 45
    stringList                     shift and go to state 46
    boolean                        shift and go to state 47
    array                          shift and go to state 48
    term                           shift and go to state 16
    addingOperator                 shift and go to state 17
    String                         shift and go to state 49
    factor                         shift and go to state 20
    textList                       shift and go to state 28
    optionList                     shift and go to state 25

state 11

    (17) statement -> while . conditionList statementList end
    (42) conditionList -> . condition
    (43) conditionList -> . conditionList logicRelation condition
    (44) condition -> . comparables relation comparables
    (45) condition -> . NOT comparables
    (46) condition -> . not comparables
    (47) condition -> . comparables
    (48) comparables -> . expression
    (49) comparables -> . stringList
    (50) comparables -> . boolean
    (51) comparables -> . array
    (66) expression -> . term
    (67) expression -> . addingOperator term
    (68) expression -> . expression addingOperator term
    (91) stringList -> . String
    (92) stringList -> . stringList PLUS expression
    (93) stringList -> . stringList PLUS String
    (94) stringList -> . stringList PLUS boolean
    (95) stringList -> . stringList PLUS array
    (96) stringList -> . boolean PLUS String
    (97) stringList -> . expression PLUS String
    (98) stringList -> . array PLUS String
    (104) boolean -> . true
    (105) boolean -> . false
    (106) array -> . LSQUARE arrayList RSQUARE
    (71) term -> . factor
    (72) term -> . term multiplyingOperator factor
    (69) addingOperator -> . PLUS
    (70) addingOperator -> . MINUS
    (99) String -> . textList
    (100) String -> . String PLUS textList
    (101) String -> . String PLUS ID
    (80) factor -> . ID
    (81) factor -> . NUMBER
    (82) factor -> . LPARENT optionList RPARENT
    (83) factor -> . FLOAT
    (84) factor -> . ID LSQUARE expression RSQUARE
    (85) factor -> . optionList funcList
    (86) factor -> . optionList funcVecList
    (87) factor -> . String funcList
    (102) textList -> . TEXT
    (103) textList -> . TEXT2
    (88) optionList -> . expression
    (89) optionList -> . array
    (90) optionList -> . String

    NOT             shift and go to state 43
    not             shift and go to state 44
    true            shift and go to state 50
    false           shift and go to state 51
    LSQUARE         shift and go to state 13
    PLUS            shift and go to state 21
    MINUS           shift and go to state 22
    ID              shift and go to state 52
    NUMBER          shift and go to state 23
    LPARENT         shift and go to state 24
    FLOAT           shift and go to state 26
    TEXT            shift and go to state 29
    TEXT2           shift and go to state 15

    conditionList                  shift and go to state 55
    condition                      shift and go to state 41
    comparables                    shift and go to state 42
    expression                     shift and go to state 45
    stringList                     shift and go to state 46
    boolean                        shift and go to state 47
    array                          shift and go to state 48
    term                           shift and go to state 16
    addingOperator                 shift and go to state 17
    String                         shift and go to state 49
    factor                         shift and go to state 20
    textList                       shift and go to state 28
    optionList                     shift and go to state 25

state 12

    (18) statement -> printList . stringList
    (19) statement -> printList . expression
    (20) statement -> printList . boolean
    (29) statement -> printList . array
    (91) stringList -> . String
    (92) stringList -> . stringList PLUS expression
    (93) stringList -> . stringList PLUS String
    (94) stringList -> . stringList PLUS boolean
    (95) stringList -> . stringList PLUS array
    (96) stringList -> . boolean PLUS String
    (97) stringList -> . expression PLUS String
    (98) stringList -> . array PLUS String
    (66) expression -> . term
    (67) expression -> . addingOperator term
    (68) expression -> . expression addingOperator term
    (104) boolean -> . true
    (105) boolean -> . false
    (106) array -> . LSQUARE arrayList RSQUARE
    (99) String -> . textList
    (100) String -> . String PLUS textList
    (101) String -> . String PLUS ID
    (71) term -> . factor
    (72) term -> . term multiplyingOperator factor
    (69) addingOperator -> . PLUS
    (70) addingOperator -> . MINUS
    (102) textList -> . TEXT
    (103) textList -> . TEXT2
    (80) factor -> . ID
    (81) factor -> . NUMBER
    (82) factor -> . LPARENT optionList RPARENT
    (83) factor -> . FLOAT
    (84) factor -> . ID LSQUARE expression RSQUARE
    (85) factor -> . optionList funcList
    (86) factor -> . optionList funcVecList
    (87) factor -> . String funcList
    (88) optionList -> . expression
    (89) optionList -> . array
    (90) optionList -> . String

    true            shift and go to state 50
    false           shift and go to state 51
    LSQUARE         shift and go to state 13
    PLUS            shift and go to state 21
    MINUS           shift and go to state 22
    TEXT            shift and go to state 29
    TEXT2           shift and go to state 15
    ID              shift and go to state 52
    NUMBER          shift and go to state 23
    LPARENT         shift and go to state 24
    FLOAT           shift and go to state 26
